--- a/.github/workflows/upload_website.yml
+++ b/.github/workflows/upload_website.yml
@@ -11,7 +11,7 @@ jobs:
     - name: rsync deploy
       uses: burnett01/rsync-deployments@6.0.0
       with:
-        switches: -avzr --progress --delete
+        switches: -avzr --progress --delete --exclude=.env
         path: src/
         remote_path: ~/public_html/
         remote_host: ${{ secrets.REMOTE_HOST }}
